--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   </head>
   <body>
     <h1>Welcome to My AI Poem Generator</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/c-robinson23/" target="_blank"
+        >Candace Robinson</a
+      >
+      and is
+      <a
+        href="https://github.com/c-robinson23/ai-poem-generator"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and is hosted on
+      <a
+        href="https://fascinating-bienenstitch-481463.netlify.app/"
+        target="_blank"
+        >Netlify</a
+      >.
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
