--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to My AI Poem Generator</h1>
+    <header>
+      <h1>AI Poem Generator</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The poem will go here
+        <br />
+        The poem will go here
+      </div>
+    </main>
+
     <footer>
       This AI project was coded by
       <a href="https://github.com/c-robinson23/" target="_blank"
@@ -26,6 +47,7 @@
         >Netlify</a
       >.
     </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
