--- a/index.html
+++ b/index.html
@@ -7,47 +7,49 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI Poem Generator</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>AI Poem Generator</h1>
+      </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the poem"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        The poem will go here
-        <br />
-        The poem will go here
-      </div>
-    </main>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          The poem will go here
+          <br />
+          The poem will go here
+        </div>
+      </main>
 
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/c-robinson23/" target="_blank"
-        >Candace Robinson</a
-      >
-      and is
-      <a
-        href="https://github.com/c-robinson23/ai-poem-generator"
-        target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and is hosted on
-      <a
-        href="https://fascinating-bienenstitch-481463.netlify.app/"
-        target="_blank"
-        >Netlify</a
-      >.
-    </footer>
-
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/c-robinson23/" target="_blank"
+          >Candace Robinson</a
+        >
+        and is
+        <a
+          href="https://github.com/c-robinson23/ai-poem-generator"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and is hosted on
+        <a
+          href="https://fascinating-bienenstitch-481463.netlify.app/"
+          target="_blank"
+          >Netlify</a
+        >.
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
